--- a/Edureka/EmployeeList/nbproject/project.properties
+++ b/Edureka/EmployeeList/nbproject/project.properties
@@ -1,6 +1,7 @@
 file.reference.AngularPOCs-EmployeeList=.
+file.reference.Edureka-EmployeeList=.
 file.reference.EmployeeList-src=src
 file.reference.src-app=src/app
 files.encoding=UTF-8
 site.root.folder=${file.reference.src-app}
-source.folder=${file.reference.EmployeeList-src}
+source.folder=${file.reference.Edureka-EmployeeList}
