Edureka Demo projects added

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
 /EmployeeList/nbproject/private/
+/Edureka/DataBinding/nbproject/private/
+/Edureka/Demos/EdurekaDemo1/nbproject/private/
+/Edureka/Demos/Module2DemoFinal/nbproject/private/
