Assignment–2-Directives-pipes added

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /Edureka/DataBinding/nbproject/private/
 /Edureka/Demos/EdurekaDemo1/nbproject/private/
 /Edureka/Demos/Module2DemoFinal/nbproject/private/
+/Edureka/Demos/Module3Demo2_Directive/nbproject/private/
+/Edureka/Directives-Pipes/nbproject/private/
