--- a/Edureka/Directives-Pipes/nbproject/project.properties
+++ b/Edureka/Directives-Pipes/nbproject/project.properties
@@ -1,3 +1,5 @@
+auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 file.reference.Edureka-Directives-Pipes=.
 file.reference.src-app=src/app
 files.encoding=UTF-8
