--- a/Edureka/Directives-Pipes/package.json
+++ b/Edureka/Directives-Pipes/package.json
@@ -6,6 +6,7 @@
         "start": "ng serve --host 0.0.0.0",
         "build": "ng build",
         "test": "ng test",
+        "coverage": "ng test --code-coverage",
         "lint": "ng lint",
         "e2e": "ng e2e"
     },
