--- a/Edureka/Services-Injection/package.json
+++ b/Edureka/Services-Injection/package.json
@@ -4,6 +4,7 @@
     "scripts": {
         "ng": "ng",
         "start": "ng serve --host 0.0.0.0",
+        "dev": "concurrently \"ng serve --host 0.0.0.0\" \"cd tserver; npm run dev\"",
         "build": "ng build",
         "test": "ng test",
         "coverage": "ng test --code-coverage",
@@ -21,6 +22,7 @@
         "@angular/platform-browser-dynamic": "~11.2.6",
         "@angular/router": "~11.2.6",
         "bootstrap": "^4.6.0",
+        "concurrently": "^6.0.0",
         "rxjs": "~6.6.0",
         "tslib": "^2.0.0",
         "zone.js": "~0.11.3"
