Code cleanup, implementing Clean Code

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /Edureka/tttt/nbproject/private/
 /Edureka/Services-Injection/nbproject/private/
 /Edureka/Demos/module4-demo2/module4-demo2/nbproject/private/
+/Edureka/Services-Injection/tserver/nbproject/private/
+/Edureka/Services-Injection/tserver/node_modules/
+/Edureka/Services-HttpClient/tserver/nbproject/private/
+/Edureka/Services-HttpClient/tserver/node_modules/
