--- a/Edureka/Services-HttpClient/nbproject/project.properties
+++ b/Edureka/Services-HttpClient/nbproject/project.properties
@@ -1,8 +1,9 @@
 auxiliary.org-netbeans-modules-javascript2-requirejs.enabled=true
 auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=js/libs
 file.reference.Edureka-Directives-Pipes=.
+file.reference.Edureka-Services-HttpClient=.
 file.reference.Edureka-Services-Injection=.
 file.reference.src-app=src/app
 files.encoding=UTF-8
 site.root.folder=${file.reference.src-app}
-source.folder=${file.reference.Edureka-Services-Injection}
+source.folder=${file.reference.Edureka-Services-HttpClient}
