Module6-Demo1 and demo2 added

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,5 @@
 /Edureka/Routing-Navigation/nbproject/private/
 /Edureka/Routing-Navigation/tserver/nbproject/private/
 /Edureka/Demos/Module5Demo2/nbproject/private/
+/Edureka/Demos/Module6-Demo1/nbproject/private/
+/Edureka/Demos/Module6-Demo2/nbproject/private/
