--- a/Edureka/Forms/package.json
+++ b/Edureka/Forms/package.json
@@ -5,7 +5,9 @@
         "ng": "ng",
         "clean": "rm node_modules -R; cd tserver; rm node_modules -R;",
         "setup": "npm install; cd tserver; npm install;",
-        "start": "concurrently \"cd tserver; npm run dev\" \"ng serve --host 0.0.0.0\"",
+        "backend": "cd tserver; npm run dev",
+        "frontend": "ng serve --host 0.0.0.0 --watch",
+        "start": "echo :: run npm run backend :: or :: npm run frontend ::",
         "build": "ng build",
         "test": "ng test",
         "coverage": "ng test --code-coverage",
