--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,5 @@
 /Edureka/Demos/Module5Demo2/nbproject/private/
 /Edureka/Demos/Module6-Demo1/nbproject/private/
 /Edureka/Demos/Module6-Demo2/nbproject/private/
+/Edureka/Demos/Module7-Demo1/nbproject/private/
+/Edureka/Demos/Module7-Demo2/nbproject/private/
