--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,4 @@
 /Edureka/Demos/Module7-Demo2/nbproject/private/
 /Edureka/Authentication/nbproject/private/
 /Edureka/Authentication/tserver/nbproject/private/
+/Edureka/Demos/Module8Demo2/nbproject/private/
